Custom Keying Set, XYZ to RGB, odd logic #38619

Closed
opened 2014-02-13 02:01:14 +01:00 by koil · 9 comments

System Information
Windows XP Professional SP2
SiS Mirage 661 Internal

Blender Version
Broken: Blender 2.69, Date: 2014-01-29 12:29, Hash: ac27a1a
Worked: unknown

Short description of error
In User Preferences > Editing > Keyframing, if 'XYZ to RGB' is enabled..
If you use a custom Keying Set, and disable the option 'XYZ=RGB Colors', the option doesnt work unless you disable the option in User Preferences.

Exact steps for others to reproduce the error
keys.blend
Here I have a cube, ive added a custom keying set 'Keying Set', I Added Location properties to the set.
'Keying Set' is the active keying set, so with the cube selected, when I press I in the 3D view, this should add the location XYZ channels.

User Preferences > Editing > Keyframing: 'XYZ to RGB' is enabled.
Before pressing I, in the Keying Set Panel and the Active Keying Set Panel (Properties > Scene).
Make sure the 'XYZ=RGB Colors' options are disabled, Shift+LMB.

Now insert the keying set keyframes by pressing I in the 3D view.
You will notice in the F-Curve Editor, the F-Curve colors are RGB.

If you disable 'XYZ to RGB' in User Preferences first, then disable the keying set options 'XYZ=RGB Colors' the keying set options work.
Though also note, you only need to enable one of the 3 options, if any are enable, the RGB option overides all.

Im not sure if this is a bug, but it seems like odd logic.

**System Information** Windows XP Professional SP2 SiS Mirage 661 Internal **Blender Version** Broken: Blender 2.69, Date: 2014-01-29 12:29, Hash: ac27a1a Worked: unknown **Short description of error** In User Preferences > Editing > Keyframing, if 'XYZ to RGB' is enabled.. If you use a custom Keying Set, and disable the option 'XYZ=RGB Colors', the option doesnt work unless you disable the option in User Preferences. **Exact steps for others to reproduce the error** [keys.blend](https://archive.blender.org/developer/F77104/keys.blend) Here I have a cube, ive added a custom keying set 'Keying Set', I Added Location properties to the set. 'Keying Set' is the active keying set, so with the cube selected, when I press I in the 3D view, this should add the location XYZ channels. User Preferences > Editing > Keyframing: 'XYZ to RGB' is enabled. Before pressing I, in the Keying Set Panel and the Active Keying Set Panel (Properties > Scene). Make sure the 'XYZ=RGB Colors' options are disabled, Shift+LMB. Now insert the keying set keyframes by pressing I in the 3D view. You will notice in the F-Curve Editor, the F-Curve colors are RGB. If you disable 'XYZ to RGB' in User Preferences first, then disable the keying set options 'XYZ=RGB Colors' the keying set options work. Though also note, you only need to enable one of the 3 options, if any are enable, the RGB option overides all. Im not sure if this is a bug, but it seems like odd logic.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @koilz

Added subscriber: @koilz
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

Admittedly the way I ended up implementing what-was-intended-to-be-local-overrides-for-these-settings-on-a-per-keyingset-basis turned out to be somewhat braindead.

Admittedly the way I ended up implementing what-was-intended-to-be-local-overrides-for-these-settings-on-a-per-keyingset-basis turned out to be somewhat braindead.
Joshua Leung self-assigned this 2014-02-13 12:08:23 +01:00
Author

Ive looked at this a bit more.

I dont think this is a bug, its just, if the User Preferences settings are enabled, they overide the Keying Set settings.

The other way I guess it could work, is if the Keying Set and Active Keying Set settings ignore the User Preferences settings.
Though I think thats a design decision.

As a user I found it odd why the keying set settings were not working.

Ive looked at this a bit more. I dont think this is a bug, its just, if the User Preferences settings are enabled, they overide the Keying Set settings. The other way I guess it could work, is if the Keying Set and Active Keying Set settings ignore the User Preferences settings. Though I think thats a design decision. As a user I found it odd why the keying set settings were not working.
Joshua Leung was unassigned by Julian Eisel 2014-11-25 01:40:37 +01:00
Julian Eisel self-assigned this 2014-11-25 01:40:37 +01:00
Member

This also looks like a To Do!?

This also looks like a To Do!?
Julian Eisel removed their assignment 2014-11-25 01:40:59 +01:00
Joshua Leung was assigned by Julian Eisel 2014-11-25 01:40:59 +01:00

This issue was referenced by e0ee74a171

This issue was referenced by e0ee74a171135e0e13a65eb60fc352eb34ada542
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit e0ee74a171.

Closed by commit e0ee74a171.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38619
No description provided.