source/blender/makesdna/DNA_anim_types.h
@@ -719,13 +719,13 @@ typedef struct KS_Path {
 	int idtype;				/* ID-type that path can be used on */
 	
 	short groupmode;		/* group naming (eKSP_Grouping) */
-	short pad;
+	short flag;				/* various settings, etc. */
 	
 	char *rna_path;			/* dynamically (or statically in the case of predefined sets) path */
 	int array_index;		/* index that path affects */
 	
-	short flag;				/* various settings, etc. */
-	short keyingflag;		/* settings to supply insertkey() with */
+	short keyingflag;		/* (eInsertKeyFlags) settings to supply insertkey() with */
+	short keyingoverride;	/* (eInsertKeyFlags) for each flag set, the relevant keyingflag bit overrides the default */
 } KS_Path;
 
 /* KS_Path->flag */
@@ -770,10 +770,14 @@ typedef struct KeyingSet {
 	char description[240];	/* (RNA_DYN_DESCR_MAX) short help text. */
 	char typeinfo[64];		/* name of the typeinfo data used for the relative paths */
 	
-	short flag;				/* settings for KeyingSet */
-	short keyingflag;		/* settings to supply insertkey() with */
-	
 	int active_path;		/* index of the active path */
+	
+	short flag;				/* settings for KeyingSet */
+	
+	short keyingflag;		/* (eInsertKeyFlags) settings to supply insertkey() with */
+	short keyingoverride;	/* (eInsertKeyFlags) for each flag set, the relevant keyingflag bit overrides the default */
+	
+	char pad[6];
 } KeyingSet;
 
 /* KeyingSet settings */
